# Fundamental

./: .gitignore  second.c  two_dim_array.c
.cache/clangd/index/: allocator.cpp.67EA949D66429506.idx  allocator.h.361814799B7972E1.idx  json.hpp.7CCCFD041F397258.idx  logger.cpp.57B2F08C12727859.idx  logger.h.F890AE0C18062CA0.idx  logger_builder.cpp.2B736FCD50731424.idx  logger_builder.h.EF234A08C87F4529.idx  logger_builder_concrete.cpp.E3C5515E55EBFFC1.idx  logger_builder_concrete.h.B6FF1592E61DA55B.idx  logger_concrete.cpp.2B686DC255DCA7B7.idx  logger_concrete.h.C4960A3ACAADAE4F.idx  memory.cpp.64AEB31B8A9DAB6D.idx  memory.h.9425CF7E0D659FD5.idx  my_time.cpp.BB03B5C755BFA1CB.idx  my_time.h.17DE4645F2058E95.idx
1/: a.out  algorithms.c  first.c
10/: a.out  matrix.c  tenth.c
2/: second.c  solve.c
3/: a.out  f.txt  file_work.c  third.c
4/: a.out  f.txt  former.txt  fourth.c
5/: fifth.c
6/: numberizm.c  sixth.c
7/: a.out  seventh.c
8/: a.out  arr.txt  array.c  eighth.c
9/: ninth.c  numbers.c
Curse_work/: README.md  info.txt
Curse_work/logger/source/: main.cpp
Curse_work/logger/source/logger/concrete/: logger_builder_concrete.h  logger_concrete.h
Curse_work/logger/source/logger/configure/: configure_file.cpp  configure_file.h
Curse_work/logger/source/logger/prototypes/: logger.cpp  logger.h
Curse_work/logger/source/time/: my_time.cpp
Curse_work/memory/2/source/: main.cpp
Curse_work/memory/2/source/allocator/: allocator.h
Curse_work/memory/2/source/memory/: memory.h
Curse_work/memory/3/source/memory_with_list/: memory_with_list.cpp  memory_with_list.h
Curse_work/memory/4/source/memory_with_descriptors/: memory_with_descriptors.h
Curse_work/source/: a.out  client  client_main.cpp  local_main.cpp  main.cpp
Curse_work/source/client_app/: main.cpp
Curse_work/source/comparer/: comparer.h
Curse_work/source/configuration/: conf.json
Curse_work/source/data/collection/: collection.cpp  collection.h
Curse_work/source/data/data_type/: data_type.h
Curse_work/source/data/database/: database.cpp  database.h
Curse_work/source/data/pool/: pool.cpp  pool.h
Curse_work/source/data/scheme/: scheme.cpp  scheme.h
Curse_work/source/file_opening/: file_opening.cpp  file_opening.h
Curse_work/source/logger/source/logger/complete/: complete_logger.h
Curse_work/source/logger/source/logger/concrete/: logger_builder_concrete.cpp  logger_concrete.cpp  logger_concrete.h
Curse_work/source/logger/source/logger/prototypes/: logger_builder.cpp
Curse_work/source/logger/source/server_logger/source/: main.cpp
Curse_work/source/logger/source/time/: my_time.cpp
Curse_work/source/logger/test_files/: conf.json
Curse_work/source/memory/2/source/allocator/: allocator.cpp
Curse_work/source/memory/3/source/: main.cpp
Curse_work/source/memory/3/source/memory_with_list/: memory_with_list.cpp
Curse_work/source/memory/4/source/: main.cpp
Curse_work/source/processing/: processing.cpp  processing.h
Curse_work/source/transport/: client  client.cpp  server  server.cpp
Curse_work/source/tree/11/source/: main.cpp
Curse_work/source/tree/11/source/allocator/: safe_allocator.cpp
Curse_work/test/: conf.json  giant.txt  test_0.txt  test_1.txt  test_2.txt
Curse_work/tree/11/source/: main.cpp
Curse_work/tree/11/source/allocator/: safe_allocator.cpp  safe_allocator.h
Curse_work/tree/11/source/tree/: binary_search_tree.h
Curse_work/tree/12/source/: main.cpp
Curse_work/tree/12/source/avl/: avl.h
Lab_1/10/: 10.c  matrix.c
Lab_1/3/: one.txt
Lab_1/4/: fourth.c
Lab_1/5/: a.out
Lab_2/1/: 1.c
Lab_2/10/: 10-2.c  10.c  a.out
Lab_2/4/: 4.c  a.out
Lab_2/5/: 5.c  arguments.c
Lab_2/6/: 6.c  a.out  test3.txt
Lab_2/7/: 7.c
Lab_2/9/: 9.c  a.out  sum.c
Lab_3/1/: 1.c  a.out
Lab_3/2/: 2.c  a.out  funcs.c
Lab_3/4/: 4.c  6cvu535fz7.csv  a.out  file_funcs.c  q.csv  text_funcs.c
Lab_3/5/: 5.c  a.out  student.c  student_funcs.c  studs.csv_1  studs.csv_2  studs.csv_3  studs.csv_4  studs.svc  studs.svc_2  text_functions.c
Lab_3/7/: 7.c  Habitats.c  Habitats_funcs.c  Habs.txt  a.out  list.c  new.txt  text_functions.c
Lab_4/1/: 1.c  a.out  arguments.c  filework.c  process.c  q.txt  stack.c  station.c
Lab_4/5/: 5.c  a.out  arguments.c  e.txt  filework.c  out.txt  process.c  q.txt  stack.c  station.c  w.txt
Lab_5/: CMakeLists.txt
Lab_5/1/: CMakeLists.txt  main.cpp
Lab_5/1/logger/concrete/: logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h
Lab_5/1/logger/configure/: configure_file.cpp
Lab_5/1/source/: main.cpp
Lab_5/1/source/logger/complete/: complete_logger.cpp  complete_logger.h
Lab_5/1/source/logger/concrete/: json.hpp  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h
Lab_5/1/source/logger/configure/: configure_file.cpp  configure_file.h
Lab_5/1/source/logger/prototypes/: logger.cpp  logger.h  logger_builder.cpp  logger_builder.h
Lab_5/1/source/time/: my_time.h
Lab_5/1/time/: my_time.cpp
Lab_5/11/: CMakeLists.txt
Lab_5/11/source/: main.cpp
Lab_5/11/source/allocator/: safe_allocator.h
Lab_5/11/source/exception/: not_implemented.cpp  not_implemented.h
Lab_5/11/source/tree/: associative_container.h  binary_search_tree.h  notes_bst.h
Lab_5/12/: CMakeLists.txt
Lab_5/12/source/: main.cpp
Lab_5/12/source/avl/: avl.h
Lab_5/14/: CMakeLists.txt
Lab_5/14/source/: main.cpp
Lab_5/14/source/splay/: splay.h
Lab_5/2/: CMakeLists.txt
Lab_5/2/source/: main.cpp
Lab_5/2/source/allocator/: allocator.cpp  allocator.h
Lab_5/2/source/memory/: memory.cpp  memory.h
Lab_5/2/source/safe_allocator/: safe_allocator.h
Lab_5/3/.cache/clangd/index/: main.cpp.7536F2CA73ABF10A.idx  memory_with_list.cpp.603D74851E6C8CF0.idx  memory_with_list.h.037D12AFB1E6272D.idx
Lab_5/3/source/: main.cpp
Lab_5/3/source/memory_with_list/: memory_with_list.cpp  memory_with_list.h
Lab_5/4/: CMakeLists.txt
Lab_5/4/source/: main.cpp
Lab_5/4/source/memory_with_descriptors/: memory_with_descriptors.cpp  memory_with_descriptors.h
(+8 files in other folders)
